base/src/test/resources/failure/syntax/issue350-not-id.aya.txt
In file $FILE:1:18 ->

  1 | def x : Type => \ 1 => x
                        ^^

Error: Parser error: `1` is not a parameter name
Parsing interrupted due to error(s).
What are you doing?
